crates/testing/tests/testscript/errors/string_escape_hex_char.error
parse error at line 2 column 6 for "\"'\\\\xfg'\"":
'\xfg'
     ^